Visual Improvements and Object Creation

--- a/asdfghjkl/asdfghjkl.html
+++ b/asdfghjkl/asdfghjkl.html
@@ -10,7 +10,12 @@
   <body>
     <div id="Title">
       <h1 id="Title">The Collection</h1>
-      <p id="Title">You find yourself in the middle of a forest, with hat stuck to the ground in front of you.<br /> The hat appears to be magic, there's a coin laying in it.<br />You pick the coin up and another coin appears in the hat.</p>
+      <p id="Title">You find yourself in the middle of a forest, with hat stuck to the ground in front of you.
+        <br />
+        The hat appears to be magic, there's a coin laying in it.
+        <br />
+        You pick up the coin, and another coin appears in the hat.
+      </p>
       <br />
       <br />
       <br />
@@ -37,15 +42,10 @@
       <hr>
       <h1>The Shop:</h1>
       <hr>
+      <br />
       <button id="buyAxe" onclick="buyAxe()" class="Upgrades">Buy an axe<br />(10 Coins)</button>
-      <br />
-      <br />
       <button id="unlockTrade" onclick="unlockTrade()" class="Upgrades">Buy a Trading Post<br />(25 Coins)<br />(15 Wood)</button>
-      <br />
-      <br />
       <button id="buySword" onclick="buySword()" class="Upgrades">Buy a Sword<br />(6 Stone)<br />(10 Wood)<br />(22 Coins)</button>
-      <br />
-      <br />
       <button id="unlockArena" onclick="unlockArena()" class="Upgrades">Buy an Arena Pass<br />(100 Coins)</button>
     </div>
     <div id="Trades" class="secondLine">
@@ -66,10 +66,27 @@
       <h2><span id="cre">Creature</span></h2>
       <p>Health: <span id="creCHealth">0</span>/<span id="creMHealth">0</span></p>
       <h2>You</h2>
-      <p>Your Health: <span id="yourCHealth">0</span>/<span id="yourMHealth">0</span></p>
+      <p><span id="playerName">Player</span>'s Health: <span id="playerCHealth">0</span>/<span id="playerMHealth">0</span></p>
       <br/>
       <button id="Attack" onclick="Attack()" class="Arena">Attack</button>
     </div>
+    <div id="Statistics">
+      <hr>
+      <h1>Statistics</h1>
+      <hr>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <br />
     <br />
     <br />
