Made some changes to Statistics div
Fixed position of Statistics div.
Added "secondLine" class to Statistics div.
Added span to tell the player their name.
Added button to change player name, if player name is " " it is autoset to "Player".

--- a/asdfghjkl/asdfghjkl.html
+++ b/asdfghjkl/asdfghjkl.html
@@ -70,10 +70,12 @@
       <br/>
       <button id="Attack" onclick="Attack()" class="Arena">Attack</button>
     </div>
-    <div id="Statistics">
+    <div id="Statistics" class="secondLine">
       <hr>
       <h1>Statistics</h1>
       <hr>
+      <p id="playerName">Name: <span id="playerName">Player</span></p>
+      <button id="changeName" onclick="player.changeName()"></button>
     </div>
     <br />
     <br />
