Made some changes to the Arena system

--- a/asdfghjkl/asdfghjkl.html
+++ b/asdfghjkl/asdfghjkl.html
@@ -66,7 +66,7 @@
       <h2><span id="cre">Creature</span></h2>
       <p>Health: <span id="creCHealth">0</span>/<span id="creMHealth">0</span></p>
       <h2>You</h2>
-      <p><span id="playerName">Player</span>'s Health: <span id="playerCHealth">0</span>/<span id="playerMHealth">0</span></p>
+      <p><span id="playerName">Player</span>'s Health: <span id="playerCHealth">100</span>/<span id="playerMHealth">100</span></p>
       <br/>
       <button id="Attack" onclick="Attack()" class="Arena">Attack</button>
     </div>
@@ -74,7 +74,7 @@
       <hr>
       <h1>Statistics</h1>
       <hr>
-      <p id="playerName">Name: <span id="playerName">Player</span></p>
+      <p id="playerName">Name: <span id="playerNameS">Player</span></p>
       <button id="changeName" onclick="player.changeName()"></button>
     </div>
     <br />
