Made changes & additions
Changed button that changes player name so that it has text.
Changed how the objects were ordered {WIP}.

--- a/asdfghjkl/asdfghjkl.html
+++ b/asdfghjkl/asdfghjkl.html
@@ -75,7 +75,7 @@
       <h1>Statistics</h1>
       <hr>
       <p id="playerName">Name: <span id="playerNameS">Player</span></p>
-      <button id="changeName" onclick="player.changeName()"></button>
+      <button id="changeName" onclick="player.changeName()">Change Name</button>
     </div>
     <br />
     <br />
